--- a/styles/style.css
+++ b/styles/style.css
@@ -101,18 +101,15 @@
   width: 30px;
 }
 
-@media (max-width: 1000px) {
-  .header h1 {
-    font-size: 52px;
-  }
+@media (max-width: 900px) {
 
   .header img {
     width: 100%;
   }
 }
 
-@media (max-width: 750px) {
-  .main img {
+@media (max-width: 700px) {
+  .main .img {
     width: 100%;
   }
 }
