--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@
   margin-top: 10px;
   display: flex;
   flex-direction: column;
-  row-gap: 5px;
+  row-gap: 25px;
 }
 
 
@@ -111,5 +111,16 @@
 @media (max-width: 700px) {
   .main .img {
     width: 100%;
+  }
+
+
+  .main p {
+
+    font-size: 22px;
+  }
+
+  .section ul {
+    padding: 0;
+    list-style: none;
   }
 }
